--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -253,7 +253,7 @@
 #elif defined(PCBGRUVIN9X)
   #define TR_VFSWFUNC          "Sécur.\0      ""Ecolage\0     ""Trim instant.""Remise à 0\0  " TR_ADJUST_GVAR TR_SOUND TR_PLAY_TRACK TR_PLAY_BOTH TR_PLAY_VALUE TR_VVARIO TR_HAPTIC TR_SDCLOGS "Rétroécl.\0   " TR_CFN_TEST
 #else
-  #define TR_VFSWFUNC          "Sécur.\0      ""Ecolage\0     ""Trim instant.""Remise à 0\0  " TR_ADJUST_GVAR TR_SOUND TR_PLAY_TRACK TR_PLAY_BOTH TR_PLAY_VALUE "Rétroécl.\0   "  TR_CFN_TEST
+  #define TR_VFSWFUNC          "Sécur.\0      ""Ecolage\0     ""Trim instant.""Remise à 0\0  " TR_ADJUST_GVAR TR_SOUND TR_PLAY_TRACK TR_PLAY_BOTH TR_PLAY_VALUE TR_VVARIO TR_HAPTIC "Rétroécl.\0   "  TR_CFN_TEST
 #endif
 
 #define LEN_VFSWRESET          TR("\004", "\012")
@@ -468,7 +468,7 @@
 #define TR_ETRIMS              TR("Trims ét.", "Trims étendus")
 #define TR_TRIMINC             TR("Pas Trim", "Pas des trims")
 #define TR_TTRACE              TR("Source gaz", INDENT "Source gaz")
-#define TR_TTRIM               TR("Trim gaz", INDENT "Trim ralenti")
+#define TR_TTRIM               TR("Trim gaz", INDENT "Trim ralenti uniq.")
 #define TR_BEEPCTR             TR("Bips centr", "Bips centrage")
 #define TR_PROTO               TR(INDENT "Proto.", INDENT "Protocole")
 #define TR_PPMFRAME            INDENT "Trame PPM"
