--- a/radio/src/translations/es.h.txt
+++ b/radio/src/translations/es.h.txt
@@ -754,6 +754,7 @@
 #define TR_MIRROR              "Mirror"
 #define TR_CLEAR               "Clear"
 #define TR_RESET               "Reset"
+#define TR_RESET_SUBMENU       "Reset..."
 #define TR_COUNT               "Count"
 #define TR_PT                  "pt"
 #define TR_PTS                 "pts"
