--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -712,6 +712,7 @@
 #define TR_CHANNELS_MONITOR    "Kanal Monitor"
 #define TR_PATH_TOO_LONG       "Path too long"
 #define TR_VIEW_TEXT           "View text"
+#define TR_FLASH_BOOTLOADER    "Flash BootLoader"
 #define TR_INTERNALRF          "----Internes HF Modul----------"
 #define TR_EXTERNALRF          "----Externes HF Modul----------"
 #define TR_FAILSAFE            "Failsafe Mode"
