--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -716,6 +716,7 @@
 #define TR_CHANNELS_MONITOR    "CHANNEL MONITOR"
 #define TR_PATH_TOO_LONG       "Path too long"
 #define TR_VIEW_TEXT           "View text"
+#define TR_FLASH_BOOTLOADER    "Flash BootLoader"
 #define TR_INTERNALRF          "Internal RF"
 #define TR_EXTERNALRF          "External RF"
 #define TR_FAILSAFE            INDENT "Failsafe mode"
