--- a/radio/src/translations/it.h.txt
+++ b/radio/src/translations/it.h.txt
@@ -712,6 +712,7 @@
 #define TR_CHANNELS_MONITOR    "CHANNELS MONITOR"
 #define TR_PATH_TOO_LONG       "Path too long"
 #define TR_VIEW_TEXT           "View text"
+#define TR_FLASH_BOOTLOADER    "Flash BootLoader"
 #define TR_INTERNALRF          "Modulo Interno"
 #define TR_EXTERNALRF          "Modulo esterno"
 #define TR_FAILSAFE            "Modo failsafe"
