No more global warning displayed only on Main View. Global warning will be displayed on all menus. Saves flash on stock 9x!

--- a/radio/src/translations/cz.h.txt
+++ b/radio/src/translations/cz.h.txt
@@ -713,6 +713,8 @@
 #define TR_PATH_TOO_LONG       "Cesta je moc dlouhá"
 #define TR_VIEW_TEXT           "Zobrazit text"
 #define TR_FLASH_BOOTLOADER    "Flash BootLoader"
+#define TR_WRITING             "\032Writing..."
+#define TR_CONFIRM_FORMAT      "Confirm Format?"
 #define TR_INTERNALRF          "Vnitřní RF modul"
 #define TR_EXTERNALRF          "Externí RF modul"
 #define TR_FAILSAFE            "Mód Failsafe"
