--- a/radio/src/translations/pl.h.txt
+++ b/radio/src/translations/pl.h.txt
@@ -713,6 +713,8 @@
 #define TR_PATH_TOO_LONG       "Ścieżka za długa"
 #define TR_VIEW_TEXT           "Pokaż tekst"
 #define TR_FLASH_BOOTLOADER    "Flash BootLoader"
+#define TR_WRITING             "\032Writing..."
+#define TR_CONFIRM_FORMAT      "Confirm Format?"
 #define TR_INTERNALRF          "Wewnętrzny moduł RF"
 #define TR_EXTERNALRF          "Zewnętrzny moduł RF"
 #define TR_FAILSAFE            "Tryb Failsafe"
