--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -713,6 +713,8 @@
 #define TR_PATH_TOO_LONG       "Path too long"
 #define TR_VIEW_TEXT           "View text"
 #define TR_FLASH_BOOTLOADER    "Flash BootLoader"
+#define TR_WRITING             "\032Writing..."
+#define TR_CONFIRM_FORMAT      "Confirm Format?"
 #define TR_INTERNALRF          "----Internes HF Modul----------"
 #define TR_EXTERNALRF          "----Externes HF Modul----------"
 #define TR_FAILSAFE            "Failsafe Mode"
