Trainer menu display bug

--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -552,7 +552,7 @@
 #define TR_POTWARNING          TR("Pot Warn.", INDENT "Pot Positions")
 #define TR_TIMEZONE            TR("Time Zone","GPS Time zone")
 #define TR_RXCHANNELORD        TR("Rx Channel Ord","Default channel order")
-#define TR_SLAVE               "Slave"
+#define TR_SLAVE               CENTER "Slave"
 #define TR_MODESRC             "Mode\006% Source"
 #define TR_MULTIPLIER          "Multiplier"
 #define TR_CAL                 "Cal"
